--- a/StylesConversiones.css
+++ b/StylesConversiones.css
@@ -237,7 +237,7 @@ body {
 }
 
 .nav-links a {
-    background: linear-gradient(45deg, #8a8780 25%);
+    background: linear-gradient(45deg, #E47267 25%);
     color: rgb(255, 255, 255);
     text-decoration: none;
     padding: 12px 24px;
